--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <style media="screen">
             #controlsController {
 
             }
             #controlsController .handle {
                 position: absolute;
-                top: 0px;
-                right: 0px;
-                float: right;
-                background-color: rgba(255, 255, 255, 0.4);
+                top:      0px;
+                right:    0px;
+                z-index:  9001;
+                background-color: #fff;
+                padding:  5px;
                 -webkit-border-bottom-left-radius: 5px;
-                -moz-border-radius-bottomleft: 5px;
-                border-bottom-left-radius: 5px;
-                border: 1px solid #000;
-                padding: 5px;
+                -moz-border-radius-bottomleft:     5px;
+                border-bottom-left-radius:         5px;
+                border:       1px solid #000;
+                border-top:   none;
+                border-right: none;
+
                 -webkit-transition: all 200ms ease-out;
-                -moz-transition: all 200ms ease-out;
-                -o-transition: all 200ms ease-out;
-                transition: all 200ms ease-out;
-                font-size: 2em;
-                color: #000;
-                opacity: 0.6;
+                -moz-transition:    all 200ms ease-out;
+                -o-transition:      all 200ms ease-out;
+                transition:         all 200ms ease-out;
+                opacity:         0.7;
+                color:           #000;
+                font-size:       2em;
                 text-decoration: none;
-                cursor: pointer;
+                cursor:          pointer;
             }
             #controlsController .handle:hover {
                 opacity: 1;
@@ -41,6 +44,8 @@
                 display: block;
             }
 
+            #controls .ctrl {
+            }
 
 
             #screensController .container-fluid {
@@ -54,18 +59,20 @@
             }
             #screensController .row .screen > .component {
                 width: 100%;
+                height: 100%;
                 display: block;
             }
             #screensController .row .screen > screen-component-iframe > iframe {
                 width: 100%;
+                height: 100%;
             }
         </style>
     </head>
     <body>
         <div class="" id="controlsController" ng-controller="controlsController" ng-class="{ 'open' : open }">
             <div class="content container-fluid">
-                <div class="">
-                    <label>
+                <div id="controls" class="col-xs-11">
+                    <div class="ctrl screens-per-row">
                         <h5>Ruutuja leveyssuunnassa:
                         <select class="" name="" ng-model="session.screens_per_row" ng-change="session.changed()" convert-to-number>
                             <option value="1">1 ruutu</option>
@@ -75,7 +82,14 @@
                             <option value="6">6 ruutua</option>
                             <option value="12">12 ruutua</option>
                         </select></h5>
-                    </label>
+                    </div>
+                    <div class="ctrl screens-height">
+                        <h5>
+                            Ruutujen korkeus: {{ session.screens_height_auto ? '' : (session.screens_height+"px") }}
+                            (automaattinen: <input type="checkbox" ng-model="session.screens_height_auto"  ng-change="session.changed()">)
+                        </h5>
+                        <input type="range" min="20" max="400" ng-model="session.screens_height" ng-hide="session.screens_height_auto"  ng-change="session.changed()">
+                    </div>
                 </div>
             </div>
             <a class="handle glyphicon glyphicon-menu-hamburger" ng-click="open = !open"></a>
@@ -83,15 +97,15 @@
         <div class="" id="screensController" ng-controller="screensController">
             <div class="container-fluid">
                 <div class="row">
-                    <div ng-repeat="screen in screens" class="screen" ng-class="'col-xs-'+colscount" ng-switch="screen.stream.type">
+                    <div ng-repeat="screen in screens" class="screen" ng-class="'col-xs-'+colscount" ng-switch="screen.stream.type" ng-style="{ height : screens_height_style }">
                         <screen-component-iframe screen="screen" ng-switch-when="iframe" class="component"></screen-component-iframe>
                     </div>
                 </div>
             </div>
         </div>
-        <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" crossorigin="anonymous"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="index.js" charset="utf-8"></script>
     </body>
 </html>
